*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2003-02-25 F@lk Brettschneider <falkbr@kdevelop.org>
+	* make-outputview: scrolling during compiling possible without immediate auto-scrolling to the bottom
+    
+2003-02-25 F@lk Brettschneider <falkbr@kdevelop.org>
 	* KDE-3.0 compile fixes
 	* some (runtime) warning output removed
     
