--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-03-06 Roberto Raggi <roberto@kdevelop.org>
+	* Addded support for tmake projects
+	* Added template for QTopia 1.6
+
 2003-03-05 Alexander Dymo <cloudtemple@mksat.net>
     * Documentation browser is now able to handle all Qt documentation including
       custom *.xml documentation. Configuration options are also available.
