--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-03-09 Roberto Raggi <roberto@kdevelop.org>
+	* added back/forward actions for the documentation browser
+
 2003-03-07 Alexander Dymo <cloudtemple@mksat.net>
     * New configuration options for the documentation browser.
       It is now capable of using any doxygen and kdoc documentation,
