*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-03-10 Caleb Tennis <caleb@aei-tech.com
+	* added "staticlib" support for QMake projects 
+
 2003-03-09 Roberto Raggi <roberto@kdevelop.org>
 	* added back/forward actions for the documentation browser
 
