fix display on the website

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2003-03-10 Caleb Tennis <caleb@aei-tech.com
+2003-03-10 Caleb Tennis <caleb@aei-tech.com>
 	* added "staticlib" support for QMake projects 
 
 2003-03-09 Roberto Raggi <roberto@kdevelop.org>
